# ixte

./: CMakeLists.txt  Doxyfile  Makefile  README.md  command.cpp  command.hpp  config.hpp  dumpteste  error_msgr.cpp  error_msgr.hpp  external.cpp  external.hpp  graphic_system.cpp  graphic_system.hpp  gui.cpp  gui.hpp  line.cpp  line.hpp  main.cpp  mouse.cpp  mouse.hpp  piper.cpp  piper.hpp  processor.cpp  processor.hpp  ruler.cpp  ruler.hpp  system.cpp  system.hpp  text_buffer.cpp  text_buffer.hpp
scripts/: load  open  save_as
